docs-archive/apache-airflow-providers-elasticsearch/2.1.0/_sources/_api/airflow/providers/elasticsearch/hooks/elasticsearch/index.rst.txt
:py:mod:`airflow.providers.elasticsearch.hooks.elasticsearch`
=============================================================

.. py:module:: airflow.providers.elasticsearch.hooks.elasticsearch


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.elasticsearch.hooks.elasticsearch.ElasticsearchHook




.. py:class:: ElasticsearchHook(schema: str = 'http', connection: Optional[airflow.models.connection.Connection] = None, *args, **kwargs)

   Bases: :py:obj:`airflow.hooks.dbapi.DbApiHook`

   Interact with Elasticsearch through the elasticsearch-dbapi.

   This hook uses the Elasticsearch conn_id.

   :param elasticsearch_conn_id: The :ref:`ElasticSearch connection id <howto/connection:elasticsearch>`
       used for Elasticsearch credentials.
   :type elasticsearch_conn_id: str

   .. py:attribute:: conn_name_attr
      :annotation: = elasticsearch_conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = elasticsearch_default

      

   .. py:attribute:: conn_type
      :annotation: = elasticsearch

      

   .. py:attribute:: hook_name
      :annotation: = Elasticsearch

      

   .. py:method:: get_conn(self) -> es.elastic.api.Connection

      Returns a elasticsearch connection object


   .. py:method:: get_uri(self) -> str

      Extract the URI from the connection.

      :return: the extracted uri.



